--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "test"
   },
+  "files": ["EventClass.js"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sroucheray/event-class.git"
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/sroucheray/event-class#readme",
   "jspm": {
-    "files": ["EventClass.js"],
+    "format": "es6",
     "directories": {},
     "dependencies": {},
     "devDependencies": {
