Switch Test Runner To Mocha

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     }
   },
+  "devDependencies": {
     "jspm": "^0.15.7"
   }
 }
