--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
   },
   "homepage": "https://github.com/sroucheray/event-class#readme",
   "jspm": {
+    "directories": {
+      "test": "test"
+    },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.88",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     }
   },
   "devDependencies": {
-    "bower-traceur": "jmcriffey/bower-traceur",
-    "bower-traceur-runtime": "jmcriffey/bower-traceur-runtime",
     "jspm": "^0.15.7",
     "mocha": "^2.2.5"
   }
