--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
   - "0.12"
+before_install:
+  - "jspm config endpoints.github.auth $GH_TOKEN"
 before_script:
   - "jspm install"
