--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "0.12"
 before_install:
-  - "jspm config endpoints.github.auth $GH_TOKEN"
+  - "jspm config registry.github.auth $GH_TOKEN"
 before_script:
   - "jspm install"
